modules/015-admission-policy-engine/charts/constraint-templates/tests/test_cases/constraints/security/deny-exec-heritage/constraints/policy_1.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: D8DenyExecHeritage
metadata:
  name: security-policy-test
spec:
  enforcementAction: deny
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
      - apiGroups: ["apps"]
        kinds: ["Deployment", "StatefulSet", "DaemonSet"]
      - apiGroups: [""]
        kinds: ["ReplicationController"]
      - apiGroups: ["batch"]
        kinds: ["Job", "CronJob"]
    name: test-pod-heritage
    scope: Namespaced
