modules/015-admission-policy-engine/charts/constraint-templates/tests/test_cases/constraints/security/deny-exec-heritage/rendered/test_samples/pods/001-001-allowed-sudouser.yaml
# Code generated by constraint_testgen; DO NOT EDIT.

apiVersion: v1
kind: Pod
metadata:
    labels:
        heritage: deckhouse
    name: test-pod
    namespace: default
spec:
    containers:
        - image: debian:stable-slim
          name: test
