modules/015-admission-policy-engine/charts/constraint-templates/tests/test_cases/constraints/security/deny-exec-heritage/rendered/test_suite.yaml
# Code generated by constraint_testgen; DO NOT EDIT.

kind: Suite
apiVersion: test.gatekeeper.sh/v1alpha1
metadata:
  name: d8-deny-exec-heritage
tests:
  - name: security-policy
    template: constraint-template.yaml
    constraint: ../constraints/policy_1.yaml
    cases:
      - name: 001-allowed-sudouser
        inventory:
          - ../../../_test-samples/ns.yaml
        object: test_samples/pods/001-001-allowed-sudouser.yaml
        assertions:
          - violations: "no"
      - name: 002-allowed-d8-sa
        inventory:
          - ../../../_test-samples/ns.yaml
        object: test_samples/pods/002-002-allowed-d8-sa.yaml
        assertions:
          - violations: "no"
      - name: 003-allowed-kube-sa
        inventory:
          - ../../../_test-samples/ns.yaml
        object: test_samples/pods/003-003-allowed-kube-sa.yaml
        assertions:
          - violations: "no"
      - name: 004-allowed-non-heritage-pod
        inventory:
          - ../../../_test-samples/ns.yaml
        object: test_samples/pods/004-004-allowed-non-heritage-pod.yaml
        assertions:
          - violations: "no"
      - name: 005-disallowed-heritage-pod-unauthorized
        inventory:
          - ../../../_test-samples/ns.yaml
        object: test_samples/pods/005-005-disallowed-heritage-pod-unauthorized.yaml
        assertions:
          - violations: "yes"
